changed banlist path
